# atcoder-py

./: .gitignore  README.md  generate.py  pyproject.toml  template.py
abc049/c/: mycode.py
abc081/a/: example_answer01.py
abc081/b/: mycode.py
abc083/b/: mycode_01.py  mycode_02.py  mycode_03.py
abc085/c/: mycode.py  mycode_02.py  mycode_03.py
abc086/a/: mycode.py
abc086/c/: mycode.py
abc087/b/: example_answer02.py  example_answer03.py  mycode.py
abc233_2021-12-25/: a_test.py  b.py  c.py  e.py  f.py  g.py
abc257_2022_06_25/a/: __main__.py
abc257_2022_06_25/b/: 3.txt
abc259_2022_07_09/e/: mycode.py
abc261_2022_07_23/: README.md
abc261_2022_07_23/b/: mycode.py
abc261_2022_07_23/e/: myreview.py  review2.py
atcoder/abc049/c/: mycode_02.py
atcoder/abc081/a/: mycode.py
atcoder/abc083/b/: mycode_01.py  mycode_03.py
atcoder/abc085/b/: mycode.py
atcoder/abc233_2021-12-25/: a.py  d.py
atcoder/abc257_2022_06_25/: README.md
atcoder/abc259_2022_07_09/: README.md
atcoder/typical90/: README.md
typical90/n04/: example_answer01.py  input_04.txt  mycode_02.py
typical90/n10/: input_02.txt  input_03.txt  input_04.txt  mycode.py
typical90/n22/: input_03.txt  mycode.py
typical90/n27/: input_01.txt  mycode.py
typical90/n33/: mycode.py
typical90/n55/: README.md  example_answer_01.py  example_answer_02.py  input_01.txt  input_11.txt  input_12.txt  make_sample_input.py
typical90/n61/: input_01.txt  input_03.txt  mycode_01.py
typical90/n67/: example_answer_01.py  input_03.txt
typical90/n78/: input_03.txt  mycode_01.py
(+138 files in other folders)
