[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["gnkm <genki.matsunaga@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.10"

[tool.poetry.dev-dependencies]
icecream = "^2.1.2"
flake8 = "^4.0.1"
pylint = "^2.14.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
